--- a/Maxi.AP/Maxi.AP.vcxproj
+++ b/Maxi.AP/Maxi.AP.vcxproj
@@ -127,11 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Escaparate.cpp" />
     <ClCompile Include="Lector_CSV.cpp" />
     <ClCompile Include="Libros.cpp" />
     <ClCompile Include="Maxi.AP.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Escaparate.h" />
     <ClInclude Include="Lector_CSV.h" />
     <ClInclude Include="Libros.h" />
   </ItemGroup>
