Se ha implementado la escritura de libros

--- a/Maxi.AP/Maxi.AP.vcxproj.filters
+++ b/Maxi.AP/Maxi.AP.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Comprar.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Escritor_CSV.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Libros.h">
@@ -42,6 +45,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="Comprar.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Escritor_CSV.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
