--- a/Maxi.AP/Maxi.AP.vcxproj
+++ b/Maxi.AP/Maxi.AP.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Comprar.cpp" />
     <ClCompile Include="Escaparate.cpp" />
+    <ClCompile Include="Escritor_CSV.cpp" />
     <ClCompile Include="Lector_CSV.cpp" />
     <ClCompile Include="Libros.cpp" />
     <ClCompile Include="Maxi.AP.cpp" />
@@ -136,6 +137,7 @@
   <ItemGroup>
     <ClInclude Include="Comprar.h" />
     <ClInclude Include="Escaparate.h" />
+    <ClInclude Include="Escritor_CSV.h" />
     <ClInclude Include="Lector_CSV.h" />
     <ClInclude Include="Libros.h" />
   </ItemGroup>
